<resources>
    <string name="app_name">JogoDaVelha</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="venceu">Parabéns ! você venceu</string>
    <string name="perdeu">Você perdeu ! </string>
    <string name="deuvelha">Oops! deu velha...</string>
    <string name="resetar">Resetar o placar</string>
    <string name="inicio">Voltar a tela inicial</string>
    <string name="preferencias">Preferências</string>
    <string name="simb_jogador1">Simbolo do jogador 1</string>
    <string name="simb_jogador2">Simbolo do jogador 2</string>
    <string name="summary_jog1">Escolha o simbolo do jogador 1</string>
    <string name="summary_jog2">Escolha o simbolo do jogador 2</string>
    <string name="jogador_1">%1$s |%2$s|</string>
    <string name="jogador_2">%1$s |%2$s|</string>
    <string name="iniciar">Jogar</string>
    <string name="escolha_nome1">Escolha o nome do jogador 1</string>
    <string name="escolha_nome2">Escolha o nome do jogador 2</string>
    <string name="deletar">Resetar</string>
    <string name="nomes_menu">Nomes</string>
</resources>