<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.senai.sp.cotia.jogodavelha.activity.MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_revert"
        android:id="@+id/menu_resetar"
        android:orderInCategory="100"
        android:title="@string/resetar"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_media_previous"
        android:id="@+id/menu_inicio"
        android:orderInCategory="100"
        android:title="@string/inicio"
        app:showAsAction="never" />
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_pref"
        android:orderInCategory="100"
        android:title="@string/preferencias"
        app:showAsAction="never" />
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_nomes"
        android:orderInCategory="100"
        android:title="@string/nomes_menu"
        app:showAsAction="never" />
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_resetar_tudo"
        android:orderInCategory="100"
        android:title="@string/deletar"
        app:showAsAction="never" />
</menu>